# stock_trading_game

./: .gitignore  README.md  example.csv  pyproject.toml
src/stock_trading_game/: __main__.py  company_kind.py  dividends_menu.py  game.py  game_menu.py  loan_menu.py  main_menu.py  numerics.py  player.py  start_menu.py  trading.py  validators.py
src/stock_trading_game/model/: company.py  company_kind.py  loan.py  numerics.py  player.py  shares.py  trading.py
src/stock_trading_game/print/: shareholders.py
tests/: conftest.py  test_company.py  test_game.py  test_parse_trading_csv.py  test_vaidators.py  trading_data.csv
