[tool.poetry]
name = "stock-trading-game"
version = "0.1.0"
description = ""
authors = ["Jan Seidl <janseidl@volny.cz>"]
license = "MIT"
readme = "README.md"
packages = [
    {include="stock_trading_game", from="src"}
]

[tool.poetry.dependencies]
python = "^3.12"
questionary = "^2.0.1"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-mypy = "^0.9.1"
pytest-pylint = "^0.21.0"
black = "^24.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stock_trading_game = "stock_trading_game.__main__:main"

[tool.pytest.ini_options]
addopts = """
    --verbose
    --pylint --pylint-rcfile=pyproject.toml
    --mypy
    """

[tool.pylint.master]
good-names = "logger,e,i,j,n,m,f,_"

[tool.pylint.messages_control]
disable = "all"
enable = """,
    unused-import,
    fixme,
    useless-object-inheritance,
    unused-variable,
    unused-argument,
    unexpected-keyword-arg,
    string,
    unreachable,
    invalid-name,
    logging-format-interpolation,
    logging-fstring-interpolation,
    unnecessary-pass,
    broad-except,
    bare-except
    """
ignored_argument_names = "_.*|^ignored_|^unused_|args|kwargs"

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 99
